@@ -88,6 +88,9 @@
 8
 9
 6
+8
+9
+6
   ***   at top-level: forcomposite(a=6,12,print(a);a=1)
   ***                                     ^-------------
   ***   index read-only: was changed to 1.
@@ -167,4 +170,4 @@
 [-100001, [-1, 1; 11, 1; 9091, 1]]
 607926
 607926
-Total time spent: 4807
+Total time spent: 5114
