@@ -40,6 +40,7 @@ forcomposite(a=2,10,print(a))
 forcomposite(a=5,11,print(a))
 forcomposite(a=6,12,print(a))
 forcomposite(a=6,,print(a); if (a>8, break))
+forcomposite(a=6,oo,print(a); if(a>8,break))
 forcomposite(a=6,12,print(a); a=1)
 forcomposite(a=2,3,print(a))
 
