@@ -92,6 +92,7 @@ BA  69- fix inefficiency in fplll not present in original code
     71- polrootsreal(x^4+2*x^3+x^2/3+x/100-1/1000,[1/10,oo]): extra root [#2112]
     72- lfun may crash on lfuncreate input with too short an vector [#2118]
 BA  73- incorrect use of graphcolors -> SEGV
+    74- forcomposite(..., oo, ) was not supported
 
   Changed
      1- [libpari] gp_filter return value is now allocated on the stack
